# OpenTrackIO-Example

./: .gitignore  README.md
cpp-client/: CMakeLists.txt  opentrackio_client.cpp
cpp-server/: CMakeLists.txt  opentrackio_server  opentrackio_server.cpp
python-client/: opentrackio_client.py  opentrackio_client_ui.py
python-server/: opentrackio_server.py
